<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Guides">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/fTheDealer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anti_corona"
                android:onClick="fTheDealer"
                android:text="@string/f_the_dealer" />

            <TextView
                android:id="@+id/fTheDealerGuide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/f_the_dealer_guide"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/Pyramid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anti_corona"
                android:onClick="pyramidGuide"
                android:text="@string/pyramid" />

            <TextView
                android:id="@+id/pyramidGuide1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/pyramid_guide1"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/pyramidDiagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/pyramid_diagram_desc"
                app:srcCompat="@drawable/pyramid_icon" />

            <TextView
                android:id="@+id/pyramidGuide2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/pyramid_guide2"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>